--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,6 @@ services:
     ports:
       - '5432:5432'
     volumes:
-      - docker-nest-postgres:/var/lib/postgresql/data
-
+      - database:/var/lib/postgresql/data
 volumes:
-  docker-nest-postgres:
+  database:
