--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,6 @@ services:
     ports:
       - '5432:5432'
     volumes:
-      - database:/var/lib/postgresql/data
+      - ./database:/var/lib/postgresql/data 777
 volumes:
   database:
