--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
 STRAPI_HOST=https://dev.sellershub.ru/api
 
+OPEN_AI_KEY=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
+
 POSTGRES_DB=sh_ai_db
 POSTGRES_USER=sh_ai_admin
 POSTGRES_PASSWORD=qwer1234
