--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
       target: production
     env_file:
       - .env
+    volumes:
+      - .:/usr/src/app
     ports:
       - 3000:3000
     depends_on:
